# ray-tracing

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  interval.rs  main.rs  material.rs  ray.rs  rt_math.rs  sphere.rs  traceable.rs  vector.rs
src/camera/: camera.rs
src/drawable/: mod.rs  sphere.rs  traceable.rs
src/materials/: dielectric.rs  lambert.rs  material.rs  metal.rs
src/math/: interval.rs  mod.rs
src/perspective_camera/: camera.rs
src/vectors/: color.rs  ray.rs  vector.rs
