[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
stdio = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"

[build]
rustflags = ["-C", "target-cpu=native"]
